# dl-fcst-load

./: README.md  pyproject.toml  requirements.txt
data/: demanda_ejecutado.csv  demanda_real.csv  prog_dia.csv  reprog_dia.csv
downloader/: pyproject.toml
downloader/src/downloader/: coes_downloader.py  logging.py  utils.py
notebooks/: 0_download_data.ipynb  1_process_data.ipynb  2_model_training.ipynb
