[project]
name = "dl-load-forecast"
version = "1.0.0"
description = "Load forecasting using deep learning based model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "downloader",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mlforecast>=1.0.2",
    "neuralforecast>=3.1.2",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=22.0.0",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform >= 'linux' or sys_platform >= 'win32'" },
]
downloader = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = [
    "downloader",
]
